backend, toute la template, bug sur appels backend

--- a/frontend/src/app/reception/reception.component.scss
+++ b/frontend/src/app/reception/reception.component.scss
@@ -7,7 +7,7 @@
     word-wrap: break-word;
 }
 .reception-text{
-    font-size: var(--reception-font-size);
+    font-size: var(--h2-font-size);
     margin-left: 4rem;
 }
 .card-image{
